...
                        .onChange(of: weeksCount) { _ in
                            scroll(scrollProxy)
                        }
                }
                .fixedSize(horizontal: false, vertical: true)
                .padding(.trailing)
                .accessibilityIdentifier("ContributionGraphGrid")
            }
        }
    }

    func onDataCell(perform action: @escaping (Int) -> Int) -> ContributionGraphView {
        var view = self
...
